--- a/yangcheApp/autoService/AutoServiceStoryboard_iPhone.storyboard
+++ b/yangcheApp/autoService/AutoServiceStoryboard_iPhone.storyboard
@@ -9,7 +9,7 @@
             <objects>
                 <tableViewController clearsSelectionOnViewWillAppear="NO" id="ABG-Ys-Jyc" customClass="YCAutoServiceIndexViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="uPp-tc-Nha">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -170,11 +170,11 @@
             <objects>
                 <viewController id="k8h-NA-IND" customClass="YCAutoServiceDetailViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mlH-dW-pXh">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="NEE-Be-XWI">
-                                <rect key="frame" x="0.0" y="22" width="320" height="416"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell alpha="0.80000000000000004" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ShopIndexCell" id="NNQ-In-SQx" customClass="YCAutoServiceShopIndexCell">
@@ -397,7 +397,7 @@
                                 </connections>
                             </tableView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="hZJ-Y7-gVh">
-                                <rect key="frame" x="0.0" y="416" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="372" width="320" height="44"/>
                                 <items>
                                     <barButtonItem style="plain" id="zQ5-xm-WFW">
                                         <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="y84-18-Fgv">
@@ -1067,7 +1067,7 @@
             <objects>
                 <tableViewController id="RWP-oU-3vu" userLabel="OrderAutoService" customClass="YCAutoServiceOrderFormViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="Hj0-BM-N8K">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <sections>
@@ -1256,7 +1256,7 @@
             <objects>
                 <viewController id="gWM-yU-vKa" customClass="YCMapViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KbD-FO-C2b">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" id="50O-HY-OEK">
@@ -1337,153 +1337,13 @@
         <image name="avatar-60" width="16" height="16"/>
         <image name="gps" width="16" height="16"/>
     </resources>
-    <classes>
-        <class className="YCAutoServiceDetailViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCAutoServiceDetailViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="contactTheShop:" candidateClass="UIButton"/>
-                <relationship kind="action" name="markFav:" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="autoServiceToolbar" candidateClass="UIToolbar"/>
-                <relationship kind="outlet" name="favBtnView" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-        <class className="YCAutoServiceIndexCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCAutoServiceIndexCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="addressView" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="distanceView" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="nameView" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="priceView" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="starsView" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="thumbView" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="YCAutoServiceIndexViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCAutoServiceIndexViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="backToHome:" candidateClass="UIBarButtonItem"/>
-                <relationship kind="action" name="refreshIndex:" candidateClass="UIBarButtonItem"/>
-            </relationships>
-        </class>
-        <class className="YCAutoServiceMetaCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCAutoServiceMetaCell.h"/>
-            <relationships>
-                <relationship kind="action" name="callTheService:" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="addressView" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="nameView" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="priceView" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="updateTimeView" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="uvView" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="YCAutoServiceOrderFormViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCAutoServiceOrderFormViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="orderFormAppointmentField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="orderFormCarInfoOptionField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="orderFormContactField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="orderFormEmailOptionField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="orderFormNameField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="orderFormPointsOptionField" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="YCAutoServiceShopDetailViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCAutoServiceShopDetailViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="segSelectAction:" candidateClass="UISegmentedControl"/>
-                <relationship kind="outlet" name="shopDetailTable" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="shopMetaView" candidateClass="YCShopDetailMetaCell"/>
-            </relationships>
-        </class>
-        <class className="YCAutoServiceShopIndexCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCAutoServiceShopIndexCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="nameView" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="thumbView" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="YCCommentViewCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCCommentViewCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="nameView" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="starsView" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="thumbView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="updateTimeView" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="YCCommentsViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCCommentsViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="backFromComments:" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-        <class className="YCImageScroller" superclassName="UIScrollView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCImageScroller.h"/>
-        </class>
-        <class className="YCImageScrollerCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCImageScrollerCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="scrollerView" candidateClass="YCImageScroller"/>
-            </relationships>
-        </class>
-        <class className="YCMapViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCMapViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
-            </relationships>
-        </class>
-        <class className="YCPostCommentViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCPostCommentViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="backToCommentList:" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="writeCommentTableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="YCSeachConditionCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCSeachConditionCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="setCategoryBtn" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="setRangeBtn" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="setSortMethodBtn" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-        <class className="YCShopDetailMetaCell" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCShopDetailMetaCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="nameView" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="starsView" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="thumbView" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="YCShopHeadActionCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCShopHeadActionCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="segAction" candidateClass="UISegmentedControl"/>
-            </relationships>
-        </class>
-        <class className="YCSlideCommentCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCSlideCommentCell.h"/>
-            <relationships>
-                <relationship kind="action" name="valueChanged:" candidateClass="UISlider"/>
-                <relationship kind="outlet" name="commentSlider" candidateClass="UISlider"/>
-                <relationship kind="outlet" name="describeView" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="titleView" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="YCWriteCommentTextViewCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCWriteCommentTextViewCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="textView" candidateClass="UITextView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="dJy-G9-fMX"/>
+        <segue reference="YHO-MI-gef"/>
         <segue reference="ICn-xz-851"/>
     </inferredMetricsTieBreakers>
 </document>
